@@ -1,3 +1,4 @@
 - Mounts used in a session are now memorized, and won't be summoned again until all mounts in the same category have been used.
 - Fixed a bug that kept the "Configure New Character" button on screen for more than one use.
+- Fixed a bug that prevented the "Configure New Character" button from showing if the player re-used the name of a previous character that used the button.
 - Fixed a bug that caused the "Configure New Character" button from not appearing on alternate accounts that didn't have it enabled. (The button is now shown conditionally based on whether or not you have any of the NCC options enabled.)
